--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,33 @@ main > section.wrapper{
     position: relative;
 }
 
+main p,
+main h2{
+    color: white;
+    text-align: end;
+    padding-right: .5rem;
+}
+
+.scroll,
+.scroll > div{
+    width: 100%;
+    height: 100%;
+}
+
+.scroll img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.active{
+    display: inline-block;
+}
+
+section.wrapper img.active{
+    display: inline-block;
+}
 
 button{
     position: absolute;
@@ -46,7 +73,7 @@ button i{
 }
 
 button:hover{
-    background-color: rgb(193, 193, 193);
+    background-color: rgb(179, 170, 179);
 }
 
 button.prev{
