--- a/style/style.css
+++ b/style/style.css
@@ -31,9 +31,22 @@ main > section.wrapper{
 
 main p,
 main h2{
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: end;
     padding-right: .5rem;
+    position: absolute;
+    bottom: .8rem;
+}
+
+h2{
+    top: 26rem;
+    right: .3rem;
+}
+
+p{
+    right: 0;
+    width: 45%;
+    line-height: 1.3;
 }
 
 .scroll,
@@ -42,11 +55,16 @@ main h2{
     height: 100%;
 }
 
+.my-carousel-item{
+    display: none;
+}
+
 .scroll img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+    position: relative;
 }
 
 .active{
